# simple-backdoor

./: .gitignore  CMakeLists.txt  c2  systemd.service
.cache/clangd/index/: conn.c.253B8E755EFB6C0E.idx  conn.h.AADE6E7530A81437.idx  main.c.53143411582DB0AB.idx  main.c.BED52D4192023C96.idx  util.h.4A495FDD79200E3E.idx
include/: conn.h  util.h
src/backdoor/: main.c
src/cc/: main.c
src/common/: conn.c
